# P10masters

./: .gitignore  BH_in_uniform_distrubution.ipynb  DistributeUsersInVisibleAreaOfSatellite.ipynb  README.md  calculategreatangle.ipynb  distrubte_users_in_homog_PPP.ipynb  distrubtion_of_cell_centres.ipynb  further_CVXPY_test.ipynb  investigation_of_cvxpy.ipynb  investigation_of_demand_over_time.ipynb  investigation_of_demand_over_time_prediction.ipynb  investigation_of_population_density_and_mapping.ipynb  new_disconnect_time_function.ipynb  requirements.txt  single_satellite_optimisation_script.py  test_of_JAX_sharding.ipynb  test_of_PPP.ipynb  test_of_capacity_calculation.ipynb
Project_library/: pyproject.toml
Project_library/Project_library/: __init__.py  core.py  core_link.py  user_core.py
Project_library/project_library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Project_library/tests/: test_core.py
User_model_experiments_single_satellite/: user_location_and_satellite_location_modellnig.ipynb
evaluation/: demand_prediction_single_satellite_optimisation_script.py  single_satellite_optimisation_script.py
visualizers/: Visualize_FSPL.ipynb  script_for_visualization.py  visualize_CDF_and_HIST_of_variable_demands.ipynb  visualize_demand_and_predictions.ipynb  visualize_evaluation_rmin_test.ipynb  visualize_results_of_optimization.ipynb
